resources/dsaas/dsaas-production/che-plugin-registry.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: che-plugin-registry
  name: che-plugin-registry
spec:
  host: che-plugin-registry.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: che-plugin-registry
    weight: 100
  wildcardPolicy: None
